Fixed bug with tag change button being cropped out of view

--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -185,7 +185,7 @@
 }
 
 .tag_change_container {
-    height: 75svh;
+    height: 100%;
     width: fit-content;
     padding: 2px;
 }
